--- a/css/base.css
+++ b/css/base.css
@@ -107,7 +107,7 @@ p {
 /*========== top ==========*/
 .hero {
   position: relative;
-  background: url(/images/topimg.png) center/cover no-repeat;
+  background: url(https://github.com/ShindoLuna/portfolio/blob/main/images/topimg.jpg?raw=true) center/cover no-repeat;
   color: #fff;
   padding: 5rem 3rem;
   overflow: hidden;
