--- a/businesscard/style.css
+++ b/businesscard/style.css
@@ -15,7 +15,7 @@ body {
   text-align: center;
   font-family: "Hiragino Sans", "Yu Gothic", sans-serif;
   color: #333;
-  background-color: #fdfaff;
+  background-color: #f7f9ff;
 }
 
 a {
@@ -34,15 +34,21 @@ p {
 line-height: 1.4em;
 }
 footer {
-	background-color: #fff3fb;
+	background-color: #e2f4e6;
 }
 
 /*======================== page ========================*/
 h1 {
   margin: 5rem auto 0;
-  background-color: #ffb6e7;
-  padding: 0.5rem;
+  background-color: #b0ddff;
+  padding: 0.5rem 2rem;
   width: fit-content;
+}
+.businesscard_wrapper {
+  margin: 12rem auto 0;
+}
+h2 {
+  margin: 3rem auto 1rem;
 }
 .work-explanation {
   margin: 4rem auto;
@@ -120,6 +126,16 @@ h1 {
 @media screen and (min-width: 769px) {
   h1 {
     margin: 5rem auto 0;
+  }
+  h2 {
+    margin: 5rem auto 1rem;
+  }
+  .businesscard_wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .work-explanation {
+    max-width: 30vw;
   }
   .work-explanation p {
     font-size: 16px;
