--- a/businesscard/style.css
+++ b/businesscard/style.css
@@ -34,7 +34,7 @@ p {
 line-height: 1.4em;
 }
 footer {
-	background-color: #e2f4e6;
+	background-color: #fff3fb;
 }
 
 /*======================== page ========================*/
